refactor: Java 17로 변경후 기존의 .collect(Collectors.toList()) 로직을 toList()로 변경한다